<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/current_folder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/folder_blank"
        android:textStyle="bold"
        android:textColor="#33AAFF"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:editable="true"
		/>

    <View   
        android:id="@+id/firstDivider"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#FFFFFF" />
    
    <GridView
        android:id="@+id/gridView1"
        android:layout_width="fill_parent"
        android:layout_height="408dp"
        android:numColumns="3" >

    </GridView>
    
    <View   
        android:id="@+id/secondDivider"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#FFFFFF" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    
    <Button
        android:id="@+id/new_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
		android:text="@string/new_photo" />

    <Button
        android:id="@+id/delete_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/delete_photo" />
    <Button
        android:id="@+id/compare_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/compare_photo" />
    
    </LinearLayout>
    
</LinearLayout>